Fix navbar open/close on mobile issue

--- a/themes/atchai/static/src/sass/modules/_navbar.sass
+++ b/themes/atchai/static/src/sass/modules/_navbar.sass
@@ -28,7 +28,8 @@
                 z-index: 99
         @media screen and (max-width: 767px)
             .navbar-collapse
-                transition: all 1s
+                transition: none
+                height: auto !important
                 padding-bottom: 60px
         li
             float: none
